--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body bgcolor="black" text="white" link="white" alink="blue" vlink="red"></body>
   <header>
     <a href="">
-      <h1><img src="img/DSC_0122.JPG" alt="頭の画像"
+      <h1><img src="https://atso81.github.io/ossanrecipe/DSC_0122.JPG" alt="頭の画像"
         height="300"></h1>
     </a>
   </header>
@@ -22,7 +22,7 @@
 <p>独り暮らしのおっさんがひたすら料理レシピを書き溜めるサイトです</p>
 <nav>
   <ul>
-    <li><a href=”リンク先パス” target=”_blank”>麻婆豆腐</a></li>
+    <li><a href=”https://atso81.github.io/ossanrecipe/mabotofu.html” target=”_blank”>麻婆豆腐</a></li>
     <li><a href=”リンク先パス” target=”_blank”>海老のチリソース</a></li>
     <li><a href=”リンク先パス” target=”_blank”>ネギだれ鶏キャベツ</a></li>
     <li><a href=”リンク先パス” target=”_blank”>鶏胸肉と小松菜とニラの炒め煮</a></li>
