--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <p>独り暮らしのおっさんがひたすら料理レシピを書き溜めるサイトです</p>
 <nav>
   <ul>
-    <li><a href=https://atso81.github.io/ossanrecipe/mabotofu.html target=”_blank”>麻婆豆腐</a></li>
+    <li><a href=mabotofu.html target=”_blank”>麻婆豆腐</a></li>
     <li><a href=”リンク先パス” target=”_blank”>海老のチリソース</a></li>
     <li><a href=”リンク先パス” target=”_blank”>ネギだれ鶏キャベツ</a></li>
     <li><a href=”リンク先パス” target=”_blank”>鶏胸肉と小松菜とニラの炒め煮</a></li>
