--- a/mabotofu.html
+++ b/mabotofu.html
@@ -17,7 +17,7 @@ line-height : 100%;
   <body bgcolor="orange" text="black"></body>
   <header>
     <a href="">
-      <h1><img src="img/mabo.jpg" alt="麻婆豆腐の写真"
+      <h1><img src="https://atso81.github.io/ossanrecipe/mabo.jpg" alt="麻婆豆腐の写真"
         height="300"></h1>
     </a>
     
