--- a/mabotofu.html
+++ b/mabotofu.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>孤独の麻婆豆腐</title>
-  <link rel="icon" href="img/DSC_0794.jpg">
+  <link rel="icon" href="https://atso81.github.io/ossanrecipe/DSC_0794.jpg">
   <link rel="stylesheet" href="css/style.css">
   <style type="text/css">
     body{
