--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <ul>
     <li><a href=mabotofu.html target=”_blank”>麻婆豆腐</a></li>
     <li><a href=”ebichili.html” target=”_blank”>海老のチリソース</a></li>
-    <li><a href=”リンク先パス” target=”_blank”>ネギだれ鶏キャベツ</a></li>
+    <li><a href=negidare.html target=”_blank”>ネギだれ鶏キャベツ</a></li>
     <li><a href=”リンク先パス” target=”_blank”>鶏胸肉と小松菜とニラの炒め煮</a></li>
     <li><a href=”リンク先パス” target=”_blank”>鰹の卵黄醤油漬け</a></li>
   </ul>
