--- a/negidare.html
+++ b/negidare.html
@@ -17,7 +17,7 @@ line-height : 100%;
   <body bgcolor="lightblue" text="black"></body>
   <header>
     <a href="">
-      <h1><img src="img/negidare.jpg" alt="ネギだれ鶏キャベツの写真"
+      <h1><img src="https://atso81.github.io/ossanrecipe/negidare.jpg" alt="ネギだれ鶏キャベツの写真"
         height="300"></h1>
     </a>
     
