--- a/mabotofu.html
+++ b/mabotofu.html
@@ -23,28 +23,29 @@ line-height : 100%;
     
   </header>
 </body>
-<h1>これが至高の麻婆豆腐じゃ！！</h1>
-<h2 style="line-height:170%;">■材料</h2>
-<p></p>
+<h1>これが至高の麻婆豆腐だ！！</h1>
+<br>
+<h2>■材料</h2>
+<br>
 <p>豆腐:1丁(400g)</p>
 <p>豚挽肉:80g</p>
 <p>葉にんにく又は万能ねぎ:1本</p>
 <p>長葱の微塵切り:1本分</p>
 <p>サラダ油:大さじ2</p>
-<p></p>
+<br>
 <p>A</p>
 <p>甜麺醤:大さじ1/2</p>
 <p>醤油:小さじ1</p>
 <p>酒:小さじ1</p>
 <p>胡椒:少々</p>
-<p></p>
+<br>
 <p>B</p>
 <p>おろしにんにく:小さじ1/2</p>
 <p>豆豉微塵切り:小さじ1</p>
 <p>唐辛子粉:小さじ1</p>
 <p>豆板醤:小さじ1と1/2</p>
 <p>ラー油:大さじ1</p>
-<p></p>
+<br>
 <p>スープストック:1/4カップ(鶏がらスープの素を水で溶かした物で可)</p>
 <p>酒:大さじ1</p>
 <p>醤油:大さじ1</p>
@@ -53,8 +54,7 @@ line-height : 100%;
 <p>ラー油:大さじ1</p>
 <p>花椒油:あれば小さじ1</p>
 <p>花椒粉:適量</p>
-<p></p>
-<p></p>
+<br><br>
 <h2>■作り方</h2>
 <p>①豆腐は1.5cm角に切る。葉にんにくは2cmくらいに切る。</p>
 <p>②サラダ油で挽肉をぽろぽろになるまで強火で炒め、Aを加えて炒める。</p>
