--- a/ebichili.html
+++ b/ebichili.html
@@ -14,40 +14,39 @@ line-height : 100%;
   </style>
 </head>
 <body>
-  <body bgcolor="red" text="black"></body>
+  <body bgcolor="lightorange" text="black"></body>
 </body>
-<h1>まるでちょっとした高級中華料理店の味！？</h1>
-<p></p>
+<h1>まるでちょっとした高級中華料理店の味！？（※個人の感想です）</h1>
+<br>
 <h2>■材料</h2>
-<p></p>
+<br>
 <p>むき海老:150g</p>
 <p>塩胡椒:少々</p>
 <p>卵白:大さじ1</p>
 <p>片栗粉:大さじ1</p>
 <p>酒:小さじ1</p>
 <p>サラダ油:小さじ1</p>
-<p></p>
+<br>
 <p>グリーンピース:15g</p>
 <p>長葱:10cm</p>
 <p>サラダ油:大さじ2</p>
-<p></p>
+<br>
 <p>A</p>
 <p>おろしにんにく:小さじ1/2</p>
 <p>おろししょうが:小さじ1</p>
 <p>豆板醤:大さじ2/3</p>
 <p>トマトケチャップ:大さじ2</p>
-<p></p>
+<br>
 <p>B</p>
 <p>スープストック:1/2カップ</p>
 <p>酒:大さじ1</p>
 <p>砂糖:小さじ1</p>
 <p>塩胡椒:少々</p>
-<p></p>
+<br>
 <p>水溶き片栗粉:大さじ1〜2</p>
 <p>卵:1/2個</p>
 <p>酢:少量</p>
-<p></p>
-<p></p>
+<br><br>
 <h2>■作り方</h2>
 <p>①海老に塩胡椒と酒をふって卵白を加え、卵白のコシが切れるまでよく混ぜてから、片栗粉とサラダ油も加えてよく混ぜ、海老によく絡ませる。</p>
 <p>②グリーンピースは生なら茹で、冷凍なら湯をかける。長葱は微塵切りにする。</p>
