--- a/ebichili.html
+++ b/ebichili.html
@@ -14,9 +14,10 @@ line-height : 100%;
   </style>
 </head>
 <body>
-  <body bgcolor="lightorange" text="black"></body>
+  <body bgcolor="orange" text="black"></body>
 </body>
-<h1>まるでちょっとした高級中華料理店の味！？（※個人の感想です）</h1>
+<h1>まるでちょっとした高級中華料理店の味！？</h1>
+<p>（※個人の感想です）</p>
 <br>
 <h2>■材料</h2>
 <br>
