--- a/mabotofu.html
+++ b/mabotofu.html
@@ -14,7 +14,7 @@ line-height : 100%;
   </style>
 </head>
 <body>
-  <body bgcolor="winered" text="black"></body>
+  <body bgcolor="pink" text="black"></body>
   <header>
     <a href="">
       <h1><img src="https://atso81.github.io/ossanrecipe/mabo.jpg" alt="麻婆豆腐の写真"
@@ -24,7 +24,7 @@ line-height : 100%;
   </header>
 </body>
 <h1>これが至高の麻婆豆腐だ！！</h1>
-<br>
+<br><br>
 <h2>■材料</h2>
 <br>
 <p>豆腐:1丁(400g)</p>
