--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <li><a href=ebichili.html target=”_blank”>海老のチリソース</a></li>
     <li><a href=negidare.html target=”_blank”>ネギだれ鶏キャベツ</a></li>
     <li><a href=torimune_komatsuna_nira.html target=”_blank”>鶏胸肉と小松菜とニラの炒め煮</a></li>
-    <li><a href=”リンク先パス” target=”_blank”>鰹の卵黄醤油漬け</a></li>
+    <li><a href=katsuo.html target=”_blank”>鰹の卵黄醤油漬け</a></li>
   </ul>
 </nav>
 </html>
