--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <li><a href=negidare.html target=”_blank”>ネギだれ鶏キャベツ</a></li>
     <li><a href=torimune_komatsuna_nira.html target=”_blank”>鶏胸肉と小松菜とニラの炒め煮</a></li>
     <li><a href=katsuo.html target=”_blank”>鰹の卵黄醤油漬け</a></li>
+    <li><a href=jigokufu_hakusai.html target=”_blank”>地獄風白菜</a></li>
   </ul>
 </nav>
 </html>
