--- a/jigokufu_hakusai.html
+++ b/jigokufu_hakusai.html
@@ -14,7 +14,7 @@ line-height : 100%;
   </style>
 </head>
 <body>
-  <body bgcolor="green" text="black"></body>
+  <body bgcolor="lightgreen" text="black"></body>
   <header>
     <a href="">
       <h1><img src="https://atso81.github.io/ossanrecipe/jigokufu_hakusai.jpeg" alt="地獄風白菜の写真"
@@ -26,7 +26,6 @@ line-height : 100%;
 <h1>冷蔵庫に白菜が余っている時に！</h1>
 <br><br>
 <h2>■材料</h2>
-<br>
 <p>白菜:350g→5mm幅位に切る</p>
 <p>胡麻油:大さじ1</p>
 <p>豆板醤:大さじ1</p>
