--- a/ebichili.html
+++ b/ebichili.html
@@ -14,7 +14,7 @@ line-height : 100%;
   </style>
 </head>
 <body>
-  <body bgcolor="orange" text="black"></body>
+  <body bgcolor="lightgray" text="black"></body>
 </body>
 <h1>まるでちょっとした高級中華料理店の味！？</h1>
 <p>（※個人の感想です）</p>
