--- a/jigokufu_hakusai.html
+++ b/jigokufu_hakusai.html
@@ -14,7 +14,7 @@ line-height : 100%;
   </style>
 </head>
 <body>
-  <body bgcolor="lightgreen" text="black"></body>
+  <body bgcolor="lightgray" text="black"></body>
   <header>
     <a href="">
       <h1><img src="https://atso81.github.io/ossanrecipe/jigokufu_hakusai.jpeg" alt="地獄風白菜の写真"
