--- a/katsuo.html
+++ b/katsuo.html
@@ -14,7 +14,7 @@ line-height : 100%;
   </style>
 </head>
 <body>
-  <body bgcolor="skyblue" text="black"></body>
+  <body bgcolor="lightgray" text="black"></body>
   <header>
     <a href="">
       <h1><img src="https://atso81.github.io/ossanrecipe/katsuo.png" alt="鰹の卵黄醤油漬けの写真"
