--- a/mabotofu.html
+++ b/mabotofu.html
@@ -14,7 +14,7 @@ line-height : 100%;
   </style>
 </head>
 <body>
-  <body bgcolor="pink" text="black"></body>
+  <body bgcolor="lightgray" text="black"></body>
   <header>
     <a href="">
       <h1><img src="https://atso81.github.io/ossanrecipe/mabo.jpg" alt="麻婆豆腐の写真"
