--- a/negidare.html
+++ b/negidare.html
@@ -14,7 +14,7 @@ line-height : 100%;
   </style>
 </head>
 <body>
-  <body bgcolor="lightblue" text="black"></body>
+  <body bgcolor="lightgray" text="black"></body>
   <header>
     <a href="">
       <h1><img src="https://atso81.github.io/ossanrecipe/negidare.jpg" alt="ネギだれ鶏キャベツの写真"
