--- a/spinach_pork_oyster.html
+++ b/spinach_pork_oyster.html
@@ -14,7 +14,7 @@ line-height : 100%;
   </style>
 </head>
 <body>
-  <body bgcolor="peach" text="black"></body>
+  <body bgcolor="lightgray" text="black"></body>
   <header>
     <a href="">
       <h1><img src="https://atso81.github.io/ossanrecipe/spinach_pork_oyster.jpeg" alt="ほうれん草と豚肉のオイスター炒めの写真"
