--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <li><a href=katsuo.html target=”_blank”>鰹の卵黄醤油漬け</a></li>
     <li><a href=jigokufu_hakusai.html target=”_blank”>地獄風白菜</a></li>
     <li><a href=spinach_pork_oyster.html target=”_blank”>ほうれん草と豚肉のオイスター炒め</a></li>
+    <li><a href=chicken_napa.html target=”_blank”>うまとろ鶏白菜</a></li>
   </ul>
 </nav>
 </html>
