--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <li><a href=jigokufu_hakusai.html target=”_blank”>地獄風白菜</a></li>
     <li><a href=spinach_pork_oyster.html target=”_blank”>ほうれん草と豚肉のオイスター炒め</a></li>
     <li><a href=chicken_napa.html target=”_blank”>うまとろ鶏白菜</a></li>
+    <li><a href=liver_vegetable_oyster.html target=”_blank”>レバーの野菜オイスター炒め</a></li>
   </ul>
 </nav>
 </html>
