--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <li><a href=spinach_pork_oyster.html target=”_blank”>ほうれん草と豚肉のオイスター炒め</a></li>
     <li><a href=chicken_napa.html target=”_blank”>うまとろ鶏白菜</a></li>
     <li><a href=liver_vegetable_oyster.html target=”_blank”>レバーの野菜オイスター炒め</a></li>
+    <li><a href=napa_pork_steak.html target=”_blank”>白菜青椒肉絲</a></li>
   </ul>
 </nav>
 </html>
