--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <li><a href=liver_vegetable_oyster.html target=”_blank”>レバーの野菜オイスター炒め</a></li>
     <li><a href=napa_pork_steak.html target=”_blank”>白菜青椒肉絲</a></li>
     <li><a href=devil_enoki_mabo.html target=”_blank”>悪魔のえのき麻婆</a></li>
+    <li><a href=keichan.html target=”_blank”>鶏もも肉のけいちゃん焼き</a></li>
   </ul>
 </nav>
 </html>
