--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <li><a href=napa_pork_steak.html target=”_blank”>白菜青椒肉絲</a></li>
     <li><a href=devil_enoki_mabo.html target=”_blank”>悪魔のえのき麻婆</a></li>
     <li><a href=keichan.html target=”_blank”>鶏もも肉のけいちゃん焼き</a></li>
+    <li><a href=tuna_natto.html target=”_blank”>まぐろ納豆ユッケ</a></li>
   </ul>
 </nav>
 </html>
