--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <li><a href=devil_enoki_mabo.html target=”_blank”>悪魔のえのき麻婆</a></li>
     <li><a href=keichan.html target=”_blank”>鶏もも肉のけいちゃん焼き</a></li>
     <li><a href=tuna_natto.html target=”_blank”>まぐろ納豆ユッケ</a></li>
+    <li><a href=pork_beansprouts_natto.html target=”_blank”>豚こまともやしの納豆炒め</a></li>
   </ul>
 </nav>
 </html>
