--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <li><a href=keichan.html target=”_blank”>鶏もも肉のけいちゃん焼き</a></li>
     <li><a href=tuna_natto.html target=”_blank”>まぐろ納豆ユッケ</a></li>
     <li><a href=pork_beansprouts_natto.html target=”_blank”>豚こまともやしの納豆炒め</a></li>
+    <li><a href=leek_egg.html target=”_blank”>至高のニラ玉</a></li>
   </ul>
 </nav>
 </html>
