--- a/choyase_niku.html
+++ b/choyase_niku.html
@@ -40,12 +40,16 @@ line-height : 100%;
 <p>※味変で柚子胡椒：適量</p>
 <br><br>
 <h2>■作り方</h2>
-<p>
-<p>
-<p>
-<p>
-<p>
-<p>
-<p>
-<p>
+<br>
+<p>①ニラを2~3cm幅に切って、幅が広い保存容器に入れる。</p>
+<h1><img src="https://atso81.github.io/ossanrecipe/choyase_niku_1.jpeg" alt="超痩せ肉漬けの写真" height="250"></h1>
+<br>
+<p>②きのこをちょうど良い大きさに切る。</p>
+<p>③鶏胸肉を斜めに薄く削ぎ切りする。</p>
+<p>④大きめのフライパンにお湯を沸かし、塩分濃度1%になるくらいの塩を入れる。(味見をしてスープとして美味しいくらいの塩分)</p>
+<p>⑤きのこと胸肉を入れて、胸肉の赤みが無くなるまで火を通す。(胸肉に火を通し過ぎると硬くなるので、ギリギリ火が通るまで。)</p>
+<p>⑥ザルにあけて水気を切り、熱々のままニラを入れた保存容器に入れて、混ぜて余熱でニラに半分火を通す。</p>
+<p>⑦ぽん酢、水、オイスターソース、胡麻油、砂糖を加えてよく混ぜる。</p>
+<p>⑧肉が冷えるまで冷蔵庫に入れて漬ける。(お好みで冷やさず食べても良い)</p>
+<p>⑨一味唐辛子、入り胡麻、お好みでラー油をかけて完成。</p>
 </html>
