--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <li><a href=tuna_natto.html target=”_blank”>まぐろ納豆ユッケ</a></li>
     <li><a href=pork_beansprouts_natto.html target=”_blank”>豚こまともやしの納豆炒め</a></li>
     <li><a href=leek_egg.html target=”_blank”>至高のニラ玉</a></li>
+    <li><a href=choyase_niku.html target=”_blank”>超痩せ肉漬け</a></li>
   </ul>
 </nav>
 </html>
