--- a/choyase_niku.html
+++ b/choyase_niku.html
@@ -23,7 +23,7 @@ line-height : 100%;
     
   </header>
 </body>
-<h1>これが至高の麻婆豆腐だ！！</h1>
+<h1>高タンパク低糖質！無限に食べられるくらい美味い！！</h1>
 <br><br>
 <h2>■材料</h2>
 <p>鶏胸肉：300g</p>
@@ -42,14 +42,26 @@ line-height : 100%;
 <h2>■作り方</h2>
 <br>
 <p>①ニラを2~3cm幅に切って、幅が広い保存容器に入れる。</p>
-<h1><img src="https://atso81.github.io/ossanrecipe/choyase_niku_1.jpeg" alt="超痩せ肉漬けの写真" height="250"></h1>
+<h1><img src="https://atso81.github.io/ossanrecipe/choyase_niku_1.jpeg" alt="超痩せ肉漬けの写真_1" height="250"></h1>
 <br>
 <p>②きのこをちょうど良い大きさに切る。</p>
 <p>③鶏胸肉を斜めに薄く削ぎ切りする。</p>
+<h1><img src="https://atso81.github.io/ossanrecipe/choyase_niku_2.jpeg" alt="超痩せ肉漬けの写真_2" height="250"></h1>
+<br>
 <p>④大きめのフライパンにお湯を沸かし、塩分濃度1%になるくらいの塩を入れる。(味見をしてスープとして美味しいくらいの塩分)</p>
+<h1><img src="https://atso81.github.io/ossanrecipe/choyase_niku_3.jpeg" alt="超痩せ肉漬けの写真_3" height="250"></h1>
+<br>
 <p>⑤きのこと胸肉を入れて、胸肉の赤みが無くなるまで火を通す。(胸肉に火を通し過ぎると硬くなるので、ギリギリ火が通るまで。)</p>
+<h1><img src="https://atso81.github.io/ossanrecipe/choyase_niku_4.jpeg" alt="超痩せ肉漬けの写真_4" height="250"></h1>
+<br>
 <p>⑥ザルにあけて水気を切り、熱々のままニラを入れた保存容器に入れて、混ぜて余熱でニラに半分火を通す。</p>
+<h1><img src="https://atso81.github.io/ossanrecipe/choyase_niku_5.jpeg" alt="超痩せ肉漬けの写真_5" height="250">
+<img src="https://atso81.github.io/ossanrecipe/choyase_niku_6.jpeg" alt="超痩せ肉漬けの写真_6" height="250">
+<img src="https://atso81.github.io/ossanrecipe/choyase_niku_7.jpeg" alt="超痩せ肉漬けの写真_7" height="250"></h1>
+<br>
 <p>⑦ぽん酢、水、オイスターソース、胡麻油、砂糖を加えてよく混ぜる。</p>
+<h1><img src="https://atso81.github.io/ossanrecipe/choyase_niku_8.jpeg" alt="超痩せ肉漬けの写真_8" height="250"></h1>
+<br>
 <p>⑧肉が冷えるまで冷蔵庫に入れて漬ける。(お好みで冷やさず食べても良い)</p>
 <p>⑨一味唐辛子、入り胡麻、お好みでラー油をかけて完成。</p>
 </html>
