--- a/choyase_niku.html
+++ b/choyase_niku.html
@@ -23,7 +23,7 @@ line-height : 100%;
     
   </header>
 </body>
-<h1>高タンパク低糖質！無限に食べられるくらい美味い！！</h1>
+<h1>高タンパク低糖質！そして無限に食べられるくらい美味い！！</h1>
 <br><br>
 <h2>■材料</h2>
 <p>鶏胸肉：300g</p>
@@ -45,6 +45,7 @@ line-height : 100%;
 <h1><img src="https://atso81.github.io/ossanrecipe/choyase_niku_1.jpeg" alt="超痩せ肉漬けの写真_1" height="250"></h1>
 <br>
 <p>②きのこをちょうど良い大きさに切る。</p>
+<br>
 <p>③鶏胸肉を斜めに薄く削ぎ切りする。</p>
 <h1><img src="https://atso81.github.io/ossanrecipe/choyase_niku_2.jpeg" alt="超痩せ肉漬けの写真_2" height="250"></h1>
 <br>
@@ -63,5 +64,6 @@ line-height : 100%;
 <h1><img src="https://atso81.github.io/ossanrecipe/choyase_niku_8.jpeg" alt="超痩せ肉漬けの写真_8" height="250"></h1>
 <br>
 <p>⑧肉が冷えるまで冷蔵庫に入れて漬ける。(お好みで冷やさず食べても良い)</p>
+<br>
 <p>⑨一味唐辛子、入り胡麻、お好みでラー油をかけて完成。</p>
 </html>
