--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <li><a href=pork_beansprouts_natto.html target=”_blank”>豚こまともやしの納豆炒め</a></li>
     <li><a href=leek_egg.html target=”_blank”>至高のニラ玉</a></li>
     <li><a href=choyase_niku.html target=”_blank”>超痩せ肉漬け</a></li>
+    <li><a href=beansprouts_cabbage_mustard.html target=”_blank”>もやしとキャベツのからしあえ</a></li>
   </ul>
 </nav>
 </html>
