--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <li><a href=leek_egg.html target=”_blank”>至高のニラ玉</a></li>
     <li><a href=choyase_niku.html target=”_blank”>超痩せ肉漬け</a></li>
     <li><a href=beansprouts_cabbage_mustard.html target=”_blank”>もやしとキャベツのからしあえ</a></li>
+    <li><a href=salt_mushroom.html target=”_blank”>無限塩きのこ</a></li>
   </ul>
 </nav>
 </html>
