--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <li><a href=choyase_niku.html target=”_blank”>超痩せ肉漬け</a></li>
     <li><a href=beansprouts_cabbage_mustard.html target=”_blank”>もやしとキャベツのからしあえ</a></li>
     <li><a href=salt_mushroom.html target=”_blank”>無限塩きのこ</a></li>
+    <li><a href=enoki_shimeji_marinade.html target=”_blank”>えのきとしめじのマリネ</a></li>
   </ul>
 </nav>
 </html>
