--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <li><a href=beansprouts_cabbage_mustard.html target=”_blank”>もやしとキャベツのからしあえ</a></li>
     <li><a href=salt_mushroom.html target=”_blank”>無限塩きのこ</a></li>
     <li><a href=enoki_shimeji_marinade.html target=”_blank”>えのきとしめじのマリネ</a></li>
+    <li><a href=beansprouts_enoki.html target=”_blank”>もやしとえのきのピリ辛炒め</a></li>
   </ul>
 </nav>
 </html>
