--- a/egg_enoki.html
+++ b/egg_enoki.html
@@ -24,7 +24,7 @@ line-height : 100%;
   </header>
 </body>
 <h1>1型糖尿病患者が作ったという糖質制限レシピ！！</h1>
-<br>
+<br><br>
 <h2>■材料（2人分）</h2>
 <p>えのき：1P（糖質3.2g）</p>
 <p>卵：2個（糖質0.4g）</p>
@@ -33,12 +33,19 @@ line-height : 100%;
 <p>塩胡椒：少々</p>
 <p>ごま油：大さじ2（卵用）と適量</p>
 <p>※合計糖質：5.4g</p>
-<br>
+<br><br>
 <h2>■作り方</h2>
+<br>
 <p>①えのきを3等分に切って軽くほぐす。</p>
+<br>
 <p>②卵をとく</p>
+<br>
 <p>③鶏がらスープの素、オイスターソース、水大さじ1を混ぜる。</p>
+<br>
 <p>④フライパンでごま油(大さじ2)を温めて卵を半熟の炒り卵を作り、フライパンから出す。</p>
+<h1><img src="https://atso81.github.io/ossanrecipe/egg_enoki_1.jpeg" alt="卵とえのきの簡単中華炒めの写真_1" height="250"></h1>
+<br>
 <p>⑤フライパンにごま油適量を温め、えのきに塩胡椒をかけて炒める。</p>
+<br>
 <p>⑥えのきに火が通ったら、炒り卵と合わせ調味料を加えて、全体的に混ぜて完成。</p>
 </html>
