--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <li><a href=salt_mushroom.html target=”_blank”>無限塩きのこ</a></li>
     <li><a href=enoki_shimeji_marinade.html target=”_blank”>えのきとしめじのマリネ</a></li>
     <li><a href=beansprouts_enoki.html target=”_blank”>もやしとえのきのピリ辛炒め</a></li>
+    <li><a href=egg_enoki.html target=”_blank”>卵とえのきの簡単中華炒め</a></li>
   </ul>
 </nav>
 </html>
