--- a/beansprouts_enoki.html
+++ b/beansprouts_enoki.html
@@ -38,9 +38,9 @@ line-height : 100%;
 <p>※糖質7.4g</p>
 <br>
 <h2>■作り方</h2>
-<p>えのきは根元を切り落として3当分に切り、石づきをほぐす。</p>
-<p>フライパンに胡麻油少々を入れて熱する。</p>
-<p>もやしとえのきを炒め、鶏がらスープの素、醤油を加えて炒める。</p>
-<p>辣油、追い胡麻油を加えて混ぜたら盛り付ける。</p>
-<p>青葱、花椒、追い辣油をかけて、中央に卵黄を乗せる。</p>
+<p>①えのきは根元を切り落として3当分に切り、石づきをほぐす。</p>
+<p>②フライパンに胡麻油少々を入れて熱する。</p>
+<p>③もやしとえのきを炒め、鶏がらスープの素、醤油を加えて炒める。</p>
+<p>④辣油、追い胡麻油を加えて混ぜたら盛り付ける。</p>
+<p>⑤青葱、花椒、追い辣油をかけて、中央に卵黄を乗せる。</p>
 </html>
