--- a/index.html
+++ b/index.html
@@ -22,27 +22,36 @@
 <p>独り暮らしのおっさんがひたすら料理レシピを書き溜めるサイトです</p>
 <nav>
   <ul>
-    <li><a href=mabotofu.html target=”_blank”>麻婆豆腐</a></li>
-    <li><a href=ebichili.html target=”_blank”>海老のチリソース</a></li>
-    <li><a href=negidare.html target=”_blank”>ネギだれ鶏キャベツ</a></li>
-    <li><a href=torimune_komatsuna_nira.html target=”_blank”>鶏胸肉と小松菜とニラの炒め煮</a></li>
-    <li><a href=katsuo.html target=”_blank”>鰹の卵黄醤油漬け</a></li>
-    <li><a href=jigokufu_hakusai.html target=”_blank”>地獄風白菜</a></li>
-    <li><a href=spinach_pork_oyster.html target=”_blank”>ほうれん草と豚肉のオイスター炒め</a></li>
-    <li><a href=chicken_napa.html target=”_blank”>うまとろ鶏白菜</a></li>
-    <li><a href=liver_vegetable_oyster.html target=”_blank”>レバーの野菜オイスター炒め</a></li>
-    <li><a href=napa_pork_steak.html target=”_blank”>白菜青椒肉絲</a></li>
+    <p>あ～</p>
     <li><a href=devil_enoki_mabo.html target=”_blank”>悪魔のえのき麻婆</a></li>
-    <li><a href=keichan.html target=”_blank”>鶏もも肉のけいちゃん焼き</a></li>
-    <li><a href=tuna_natto.html target=”_blank”>まぐろ納豆ユッケ</a></li>
-    <li><a href=pork_beansprouts_natto.html target=”_blank”>豚こまともやしの納豆炒め</a></li>
-    <li><a href=leek_egg.html target=”_blank”>至高のニラ玉</a></li>
-    <li><a href=choyase_niku.html target=”_blank”>超痩せ肉漬け</a></li>
-    <li><a href=beansprouts_cabbage_mustard.html target=”_blank”>もやしとキャベツのからしあえ</a></li>
-    <li><a href=salt_mushroom.html target=”_blank”>無限塩きのこ</a></li>
+    <li><a href=chicken_napa.html target=”_blank”>うまとろ鶏白菜</a></li>
+    <li><a href=enoki_tofu.html target=”_blank”>えのきあんかけ豆腐</a></li>
     <li><a href=enoki_shimeji_marinade.html target=”_blank”>えのきとしめじのマリネ</a></li>
-    <li><a href=beansprouts_enoki.html target=”_blank”>もやしとえのきのピリ辛炒め</a></li>
+    <li><a href=ebichili.html target=”_blank”>海老のチリソース</a></li>
+    <p>か～</p>   
+    <li><a href=katsuo.html target=”_blank”>鰹の卵黄醤油漬け</a></li>
+    <p>さ～</p>
+    <li><a href=leek_egg.html target=”_blank”>至高のニラ玉</a></li>
+    <li><a href=jigokufu_hakusai.html target=”_blank”>地獄風白菜</a></li>
+    <p>た～</p>
     <li><a href=egg_enoki.html target=”_blank”>卵とえのきの簡単中華炒め</a></li>
+    <li><a href=choyase_niku.html target=”_blank”>超痩せ肉漬け</a></li>
+    <li><a href=torimune_komatsuna_nira.html target=”_blank”>鶏胸肉と小松菜とニラの炒め煮</a></li>
+    <li><a href=keichan.html target=”_blank”>鶏もも肉のけいちゃん焼き</a></li>
+    <p>な～</p>
+    <li><a href=negidare.html target=”_blank”>ネギだれ鶏キャベツ</a></li>
+    <p>は～</p>
+    <li><a href=napa_pork_steak.html target=”_blank”>白菜青椒肉絲</a></li>
+    <li><a href=pork_beansprouts_natto.html target=”_blank”>豚こまともやしの納豆炒め</a></li>
+    <li><a href=spinach_pork_oyster.html target=”_blank”>ほうれん草と豚肉のオイスター炒め</a></li>
+    <p>ま～</p>
+    <li><a href=tuna_natto.html target=”_blank”>まぐろ納豆ユッケ</a></li>
+    <li><a href=mabotofu.html target=”_blank”>麻婆豆腐</a></li>
+    <li><a href=salt_mushroom.html target=”_blank”>無限塩きのこ</a></li>
+    <li><a href=beansprouts_enoki.html target=”_blank”>もやしとえのきのピリ辛炒め</a></li>    
+    <li><a href=beansprouts_cabbage_mustard.html target=”_blank”>もやしとキャベツのからしあえ</a></li>
+    <p>ら～</p>    
+    <li><a href=liver_vegetable_oyster.html target=”_blank”>レバーの野菜オイスター炒め</a></li>
   </ul>
 </nav>
 </html>
