--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <li><a href=negidare.html target=”_blank”>ネギだれ鶏キャベツ</a></li>
     <p>は～</p>
     <li><a href=napa_pork_steak.html target=”_blank”>白菜青椒肉絲</a></li>
+    <li><a href=niratamatofu.html target=”_blank”>ピリ辛ニラたま豆腐丼</a></li>
     <li><a href=pork_beansprouts_natto.html target=”_blank”>豚こまともやしの納豆炒め</a></li>
     <li><a href=spinach_pork_oyster.html target=”_blank”>ほうれん草と豚肉のオイスター炒め</a></li>
     <p>ま～</p>
