--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <li><a href=ebichili.html target=”_blank”>海老のチリソース</a></li>
     <p>か～</p>   
     <li><a href=katsuo.html target=”_blank”>鰹の卵黄醤油漬け</a></li>
+    <li><a href=beef_maitake.html target=”_blank”>牛小間切れと舞茸の甜麺醤炒め</a></li>
     <p>さ～</p>
     <li><a href=leek_egg.html target=”_blank”>至高のニラ玉</a></li>
     <li><a href=jigokufu_hakusai.html target=”_blank”>地獄風白菜</a></li>
