--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <p>さ～</p>
     <li><a href=leek_egg.html target=”_blank”>至高のニラ玉</a></li>
     <li><a href=jigokufu_hakusai.html target=”_blank”>地獄風白菜</a></li>
+    <li><a href=shimeji_pork.html target=”_blank”>しめじと豚こまの中華炒め</a></li>
     <p>た～</p>
     <li><a href=egg_enoki.html target=”_blank”>卵とえのきの簡単中華炒め</a></li>
     <li><a href=choyase_niku.html target=”_blank”>超痩せ肉漬け</a></li>
