--- a/greenpepper_meat_tofu.html
+++ b/greenpepper_meat_tofu.html
@@ -23,7 +23,7 @@ line-height : 100%;
     
   </header>
 </body>
-<h1>他のピーマン料理に飽きたらこれ作ってみて！</h1>
+<h1>他のピーマン料理に飽きたら作ってみてください！</h1>
 <br>
 <h2>■材料</h2>
 <br>
